Adding ci, cd and test configuration

--- a/kubernetes/k8s-deployment.tmpl
+++ b/kubernetes/k8s-deployment.tmpl
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: abcall-auth-api
-          image: abcall.azurecr.io/abcall-auth-api:1.0.0
+          image: abcall.azurecr.io/abcall-auth-api:{{IMAGE_TAG}}
           env:
             - name: "FLASK_APP"
               valueFrom:
